--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ body {
   color: #fff;
 }
 
-.block__functions {
+.main2__functions {
   margin-bottom: 170px;
 }
 
@@ -402,6 +402,7 @@ body {
 }
 
 .footer__title {
+  width: 400px;
   margin: 50px 70px 0 54px;
   font: 600 30px/37px montserrat, arial, helvetica, sans-serif;
   color: #fff;
@@ -744,6 +745,7 @@ body {
   }
 
   .footer__left{
+    order: 2;
     margin-top: 40px;
     width: 375px;
     height: 303px;
@@ -751,6 +753,7 @@ body {
 
   .footer__title,
   .footer__subtitle {
+    width: 320px;
     margin-left: 32px;
     margin-right: 17px;
     margin-top: 15px;
@@ -764,7 +767,8 @@ body {
   .block__functions,
   .section-button,
   .info,
-  .footer__icon {
+  .footer__icon,
+  .footer-button {
     display: none;
   }
 }
@@ -774,30 +778,42 @@ body {
     width: 768px;
   }
 
+  .menu__line {
+    display: none;
+  }
+
   .menu,
   .menu-ru__item {
     display: none;
   }
 
-  .menu__line {
-    margin-bottom: 15px;
+  .header {
+    width: 96%;
+    background: no-repeat 97% 40px url(img/ipad/menu.svg);
   }
 
   .tesla-main {
-    width: 673px;
+    margin-bottom: 20px;
+    width: 703px;
     height: 328px;
   }
 
   .main {
-    background: no-repeat center top 105px url(img/ipad/background.svg);
+    background: no-repeat center top 80px url(img/ipad/background.svg);
   }
 
+  .main__title {
+    margin-top: 90px;
+    line-height: 85px;
+  }
+
+  .main__column{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 37px;
+  }
   .tesla__title {
     margin-bottom: 85px;
-  }
-
-  .main__icon {
-    margin-bottom: 54px;
   }
 
   .main__row {
@@ -807,39 +823,45 @@ body {
   }
 
   .speed{
-    background: no-repeat left 30px url(img/ipad/speed.svg);
+    background: no-repeat left 20px url(img/ipad/speed.svg);
   }
 
   .distance {
-    background: no-repeat left 30px url(img/ipad/road.svg);
+    background: no-repeat left 15px url(img/ipad/road.svg);
   }
 
   .main-speed__column {
+    height: 60px;
     margin-right: 0px;
   }
 
   .main-distance__column {
-    height: 80px;
+    height: 60px;
   }
 
   .main-speed__title {
-    margin: 15px 0px 0 80px;
+    margin: 5px 0px 0 85px;
     font: 600 50px/61px montserrat, arial, helvetica, sans-serif;
   }
 
   .main-distance__title {
+    margin-right: 0px;
+    margin-top: 2px;
     margin-left: 60px;
     font: 600 50px/61px montserrat, arial, helvetica, sans-serif;
   }
 
   .main-speed__text,
   .main-distance__text {
-    margin-top: 35px, 40px;
+    margin-right: 10px;
+    margin-top: 25px;
+    margin-left: 10px;
+    margin-right: 10px;
     font: 600 20px/24px montserrat, arial, helvetica, sans-serif;
   }
 
   .main-speed__item {
-    margin-left: 80px;
+    margin-left: 85px;
     font: 400 12px/15px montserrat, arial, helvetica, sans-serif;
   }
 
@@ -852,29 +874,259 @@ body {
   .main__button {
     display: flex;
     justify-content: space-between;
-    width: 85%;
+    width: 86%;
     margin: auto;
-    background: no-repeat left 30px url(img/ipad/wheel.svg);
+    background: no-repeat left 26px url(img/ipad/wheel.svg);
   }
 
   .main-text__button {
-    margin-left: 35px;
+    margin-left: 45px;
     margin-top: 35px;
     font: 700 16px/20px montserrat, arial, helvetica, sans-serif;
   }
 
   .main-buy__button {
-    margin-top: 25px;
+    font: 700 13px/16px montserrat, arial, helvetica, sans-serif;
+    margin-top: 15px;
     color: #fff;
-    padding: 15px 60px;
+    padding: 20px 73px;
     outline: solid 2px #fff;
     background: #e51937;
   }
 
-  .main2,
+  .dropdown  {
+    margin-top: 50px;
+    margin-left: 49%;
+    margin-bottom: 65px;
+  }
+
+  .main2{
+    background: no-repeat left 0 url(img/ipad/salon.png);
+    display: flex;
+    flex-direction: column;
+    width: 768px;
+  }
+
+  .main2__title {
+    margin-top: 10px;
+    margin-left: 435px;
+    font: 600 70px/85px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .block {
+    margin-top: 348px;
+    width: 768px;
+    height: 487px;
+  }
+
+  .main2__functions {
+    display: flex;
+    margin-bottom: 50px;
+  }
+
+  .block__title {
+    margin-top: 60px;
+    margin-left: 35px;
+  }
+
+  .block__subtitle {
+    margin-top: 20px;
+    margin-left: 35px;
+  }
+
+  .block__functions {
+    margin-right: 80px;
+  }
+
+  .display {
+    margin-bottom: 15px;
+  }
+
+  .display__title {
+  margin-top: 3px;
+  margin-right: 10px;
+  margin-left: 55px;
+  }
+
+  .display__subtitle {
+    margin-top: 18px;
+  }
+
+  .wifi {
+    background: no-repeat left 15px url(img/wifi.svg);
+    margin-left: 45px;
+    margin-bottom: 22px;
+  }
+
+  .wifi__title {
+    margin-left: 65px;
+  }
+
+  .wifi__item {
+    margin-left: 65px;
+  }
+
+  .volume {
+    margin-left: 45px;
+  }
+
+  .section-button {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 56px;
+    width: 60%;
+    background: no-repeat left url(img/ipad/more.svg);
+  }
+
+  .text__button {
+    font: 700 16px/20px montserrat, arial, helvetica, sans-serif;
+    margin-left: 45px;
+    margin-top: 15px;
+  }
+
+  .buy__button {
+    font: 700 16px/20px montserrat, arial, helvetica, sans-serif;
+    padding: 15px 65px;
+  }
+
   .footer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer__left{
+    order: 2;
+    width: 768px;
+    height: 487px;
+    margin-top: 40px;
+  }
+
+  .footer__item {
+    width: 350px;
+  }
+
+  .footer__title,
+  .footer__subtitle {
+    margin-left: 34px;
+    width: 330px;
+  }
+
+  .footer__title {
+    margin-top: 63px;
+  }
+
+  .footer__subtitle {
+    margin-top: 10px;
+  }
+
+  .footer__info {
+    display: flex;
+  }
+
+  .protection {
+    margin-top: 63px;
+    margin-left: 72px;
+
+  }
+
+  .location {
+    margin-top: 27px;
+    margin-left: 72px;
+  }
+
+  .quality {
+    padding-right: 40px;
+  }
+
+  .front {
+    margin-right: 60px;
+  }
+
+  .footer-button {
+    display: flex;
+    justify-content: space-between;
+    background: no-repeat left url(img/ipad/more.svg);
+    margin-top: 58px;
+    width: 60%;
+  }
+
+  .more__button {
+    margin-top: 15px;
+    margin-left: 45px;
+    font: 700 16px/20px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .order__button {
+    font: 700 16px/20px montserrat, arial, helvetica, sans-serif;
+    padding: 15px 65px;
+}
+  }
+
+  .footer__right {
+    order: 1;
+    background: no-repeat 0 110px url(img/ipad/ipadcar.svg);
+    width: 768px;
+    height: 500px;
+  }
+
+  .footer__text {
+    z-index: -1;
+    font: 600 148px/180px montserrat, arial, helvetica, sans-serif;
+    margin-top: 40px;
+    margin-left: 80px;
+  }
+
+  .item1 {
+    margin-top: 115px;
+    margin-left: 173px;
+  }
+
+  .item2 {
+    margin-top: 83px;
+    margin-left: 372px;
+  }
+
+  .item3 {
+    margin-top: 365px;
+    margin-left: 412px;
+  }
+
+  .security {
+    font: 600 15px/13px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .security-1,
+  .security-2,
+  .security-3 {
+    width: 130px;
+  }
+
+  .security-3 {
+    margin-top: 58px;
+    margin-left: 10px;
+    width: 180px;
+  }
+
+  .line__item1 {
+    height: 201px;
+  }
+
+  .line__item2 {
+    height: 94px;
+  }
+
+  .line__item3 {
+    height: 87px;
+  }
+
+  .footer__icon {
     display: none;
   }
+
+  .five {
+    display: none;
+  }
+
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
