--- a/style.css
+++ b/style.css
@@ -471,7 +471,8 @@ body {
 }
 
 .footer__text {
-  font: 600 197px/244px montserrat, arial, helvetica, sans-serif;
+  white-space: nowrap;
+  font: 600 190px/244px montserrat, arial, helvetica, sans-serif;
   margin-top: 100px;
   margin-left: 190px;
   color: #e51937;
@@ -1126,7 +1127,7 @@ body {
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
   .wrapper {
-    width: 1024px;
+    max-width: 1024px;
   }
 
   .menu__item {
@@ -1196,11 +1197,6 @@ body {
     width: 86%;
   }
 
-  .footer__icon {
-    width: 720px;
-    margin-top: 350px;
-  }
-
   .footer__left {
     width: 400px;
   }
@@ -1248,6 +1244,15 @@ body {
     font-size: 14px;
   }
 
+  .footer__right {
+
+  }
+
+  .footer__icon {
+    max-width: 680px;
+    margin-top: 350px;
+  }
+
   .item1 {
     font-size: 15px;
     margin-top: 261px;
@@ -1267,8 +1272,9 @@ body {
   }
 
   .footer__text {
-    font-size: 122px;
-    margin-left: 120px;
+    white-space: nowrap;
+    font: 600 115px/244px montserrat, arial, helvetica, sans-serif;
+    margin-left: 30px;
     margin-top: 240px;
   }
 }
