--- a/style.css
+++ b/style.css
@@ -535,11 +535,7 @@ body {
   margin-left: 498px;
 }
 
-@media screen and (min-width: 1439px) and (max-width: 1025px) {
-
-}
-
-@media screen and (min-width: 869px) and (max-width: 1024px) {
+@media screen and (min-width: 1201px) and (max-width: 1439px) {
   .wrapper {
     width: 100vw;
   }
@@ -563,7 +559,7 @@ body {
   }
 
   .main__row {
-    width: 70%;
+    width: 60%;
     margin: auto;
   }
 
@@ -581,12 +577,12 @@ body {
 
   .main2 {
     width: 100vw;
-    background: no-repeat left 60px url(img/ipad/salon.svg);
-    background-size: cover;
+    background: no-repeat left url(img/ipad/salon.svg);
+    background-size: 1100px 800px;
   }
 
   .block {
-    width: 400px;
+    width: 410px;
     height: 700px;
   }
 
@@ -613,7 +609,7 @@ body {
   }
 
   .footer__left {
-    width: 400px;
+    width: 440px;
   }
 
   .footer__title {
@@ -623,7 +619,7 @@ body {
 
   .footer__subtitle {
     margin: 15px 60px 0 60px;
-    font-size: 13px;
+    font-size: 15px;
   }
 
   .protection,
@@ -637,7 +633,7 @@ body {
   }
 
   .quality {
-    padding-right: 55px;
+    padding-right: 80px;
   }
 
   .five {
@@ -660,45 +656,196 @@ body {
   }
 
   .footer__icon {
-    max-width: 144%;
+    max-width: 860px;
+    margin-top: 250px;
+  }
+
+  .security {
+    width: 15vw;
+  }
+
+  .item1 {
+    font-size: 17px;
+    margin-top: 205px;
+    margin-left: 115px;
+  }
+
+  .item2 {
+    font-size: 17px;
+    margin-top: 190px;
+    margin-left: 343px;
+  }
+
+  .item3 {
+    font-size: 17px;
+    margin-top: 550px;
+    margin-left: 390px
+  }
+
+  .footer__text {
+    font-size: 12vw;
+    margin-left: 135px;
+    margin-top: 140px;
+  }
+}
+
+@media screen and (min-width: 941px) and (max-width: 1200px) {
+  .wrapper {
+    width: 100vw;
+  }
+
+  .menu__item {
+    margin-right: 36px;
+    font: 600 13px/18px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .menu-ru__item {
+    margin-right: 25px;
+    font: 600 13px/18px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .main {
+    background: no-repeat center 15px url(img/1024/background.svg);
+  }
+
+  .tesla-main {
+    height: 350px;
+  }
+
+  .main__row {
+    width: 75%;
+    margin: auto;
+  }
+
+  .main-speed__column {
+    display: flex;
+    margin-right: 40px;
+    border: dashed 1px red;
+  }
+
+  .dropdown {
+    margin-top: 45px;
+    margin-bottom: 100px;
+    margin-left: 50%;
+  }
+
+  .main2 {
+    width: 100vw;
+    background: no-repeat left 60px url(img/ipad/salon.svg);
+    background-size: cover;
+  }
+
+  .block {
+    width: 410px;
+    height: 700px;
+  }
+
+  .block__title {
+    font: 600 25px/36px montserrat, arial, helvetica, sans-serif;
+  }
+
+  .block__subtitle {
+    margin-right: 20px;
+    font-size: 13px;
+  }
+
+  .main2__functions {
+    margin-bottom: 60px;
+  }
+
+  .display {
+    margin-top: 45px;
+  }
+
+  .section-button,
+  .footer-button {
+    width: 86%;
+  }
+
+  .footer__left {
+    width: 440px;
+  }
+
+  .footer__title {
+    margin: 50px 70px 0 64px;
+    font-size: 25px;
+  }
+
+  .footer__subtitle {
+    margin: 15px 60px 0 60px;
+    font-size: 15px;
+  }
+
+  .protection,
+  .location,
+  .five {
+    margin-left: 60px;
+  }
+
+  .protection {
+    font-size: 27px;
+  }
+
+  .quality {
+    padding-right: 80px;
+  }
+
+  .five {
+    margin-top: 60px;
+    margin-bottom: 50px;
+  }
+
+  .five__title {
+    background-size: 60px;
+    font-size: 45px;
+  }
+
+  .footer-button {
+    width: 90%;
+  }
+
+  .more__button,
+  .order__button {
+    font-size: 14px;
+  }
+
+  .footer__icon {
+    max-width: 600px;
     margin-top: 350px;
   }
 
   .security {
-    width: 10vw;
+    width: 15vw;
   }
 
   .item1 {
     font-size: 15px;
-    margin-top: 261px;
-    margin-left: 79px;
+    margin-top: 230px;
+    margin-left: 48px;
   }
 
   .item2 {
     font-size: 15px;
-    margin-top: 278px;
-    margin-left: 270px;
+    margin-top: 265px;
+    margin-left: 208px;
   }
 
   .item3 {
     font-size: 15px;
-    margin-top: 600px;
-    margin-left: 308px;
+    margin-top: 555px;
+    margin-left: 240px
   }
 
   .footer__text {
-    white-space: nowrap;
-    font-size: 100px;
-    line-height: 244px;
+    font-size: 110px;
     margin-left: 30px;
     margin-top: 240px;
   }
-
 }
 
-@media screen and (min-width: 376px) and (max-width: 868px) {
+@media screen and (min-width: 376px) and (max-width: 940px) {
   .wrapper {
-    width: 868px;
+    width: 940px;
   }
 
   .menu__line {
@@ -768,18 +915,13 @@ body {
   }
 
   .main-distance__title {
-    margin-right: 0px;
-    margin-top: 2px;
-    margin-left: 60px;
+    margin: 2px 0 0 60px;
     font: 600 50px/61px montserrat, arial, helvetica, sans-serif;
   }
 
   .main-speed__text,
   .main-distance__text {
-    margin-right: 10px;
-    margin-top: 25px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 25px 10px 0 10px;
     font: 600 20px/24px montserrat, arial, helvetica, sans-serif;
   }
 
@@ -825,10 +967,10 @@ body {
 
   .main2{
     background: no-repeat left 0 url(img/ipad/salon.png);
-    background-size: 868px;
+    background-size: 940px;
     display: flex;
     flex-direction: column;
-    width: 868px;
+    width: 940px;
   }
 
   .main2__title {
@@ -839,7 +981,7 @@ body {
 
   .block {
     margin-top: 348px;
-    width: 868px;
+    width: 940px;
     height: 487px;
   }
 
@@ -856,6 +998,7 @@ body {
   .block__subtitle {
     margin-top: 20px;
     margin-left: 35px;
+    padding-right: 100px;
   }
 
   .block__functions {
@@ -882,10 +1025,7 @@ body {
     margin-bottom: 22px;
   }
 
-  .wifi__title {
-    margin-left: 65px;
-  }
-
+  .wifi__title,
   .wifi__item {
     margin-left: 65px;
   }
@@ -920,7 +1060,7 @@ body {
 
   .footer__left{
     order: 2;
-    width: 868px;
+    width: 940px;
     height: 487px;
     margin-top: 40px;
   }
@@ -987,7 +1127,7 @@ body {
   .footer__right {
     order: 1;
     background: no-repeat 0 110px url(img/ipad/ipadcar.svg);
-    width: 868px;
+    width: 940px;
     height: 500px;
   }
 
